<resources>
    <string name="app_name">InventoryApp</string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_price">Product Price</string>
    <string name="category_overview">Product Overview</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_supplier_info">Supplier Information</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_all_entries">Delete all</string>
    <string name="unit_per_price">€</string>
    <string name="minus_button">-</string>
    <string name="default_text_quantity">0</string>
    <string name="plus_button">+</string>
    <string name="toast_missing_product_name">You should insert a product name.</string>
    <string name="toast_missing_product_price">You should insert a product price.</string>
    <string name="toast_missing_supplier_name">You should insert a supplier name.</string>
    <string name="toast_missing_supplier_phone_number">You should insert a supplier phone number.</string>
    <string name="editor_activity_title_new_item">New Item</string>
    <string name="editor_activity_title_edit_item">Edit Item</string>
    <string name="editor_insert_item_failed">Error saving the item :(</string>
    <string name="editor_insert_item_successful">Item saved! :)</string>
    <string name="unsaved_changes_dialog_msg">You have unsaved changes. Are you sure you want to quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_item_successful">Item deleted! :) </string>
    <string name="editor_delete_item_failed">Error deleting this item :(</string>
    <string name="inventory_empty_text">No products</string>
    <string name="empty_view_subtitle_text">Press the + button to add a new item!</string>
    <string name="contact_supplier_button_string">Contact Supplier</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>
    <string name="sale">Sale</string>
    <string name="item_sold">Item sold!</string>
    <string name="item_not_sold">Sorry, there was a problem selling this item.</string>
    <string name="zero_quantity">No more items to sell :(</string>
</resources>
