<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context=".EditorActivity">

    <!-- Product Information -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapSentences" />

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp">

                <!-- Weight field -->
                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_price"
                    android:inputType="numberDecimal" />

                <!-- Units for weight (kg) -->
                <TextView
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_per_price" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <!-- Stock information -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_quantity" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="@dimen/activity_padding">

            <Button
                android:id="@+id/edit_remove_item_button"
                style="@style/quantity_button"
                android:layout_width="52dp"
                android:text="@string/minus_button" />

            <TextView
                android:id="@+id/edit_item_quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text_quantity"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/edit_add_item_button"
                style="@style/quantity_button"
                android:text="@string/plus_button" />


        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier_info" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_supplier_phone_number"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier_phone_number"
                android:inputType="phone"
                android:maxLength="16" />


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/call_supplier_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/contact_supplier_button_string" />
</LinearLayout>
